Revamp code; add doc, README & InfoButton
Reorganize code for better readability and understanding the code.
Add aplication documentation and README.md file.
Include InfoButton in the main panel to provide users with information about the application, including how to use the database and available planner options.